# simple-typer

./: .coverage  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml
src/simple_typer/: __init__.py
tests/simple_typer/: test_init.py
